--- a/common.blocks/seed-list-item/seed-list-item.css
+++ b/common.blocks/seed-list-item/seed-list-item.css
@@ -75,3 +75,13 @@
     font-size: 10pt;
     color: #657786;
 }
+
+.seed-list-item__snippet img.image {
+    width:  150px;
+    height: 130px;
+}
+.seed-list-item__snippet {
+    width: 50%;
+    margin: 0 auto;
+    padding: 0 10px;
+}
